# arxiv-rename

./: LICENSE.md  README.md  requirements.txt  setup.cfg
src/arxiv-rename/: arxiv_rename.py  arxiv_watcher.py
src/arxiv_rename/: __main__.py  arxiv_detect.py  arxiv_download.py  arxiv_rename.py  arxiv_watcher.py
src/arxiv_rename.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
