[metadata]
name = arxiv-rename
version = 0.0.1
author = Rishi Raj
author_email = rishiraj.1012exp@gmail.com
description = arxiv-rename: a python package for renaming files downloaded from arXiv
long_description = arxiv-rename: a python package for renaming files downloaded from arXiv
long_description_content_type = text/markdown
url = https://github.com/rshrj/arxiv-rename
project_urls =
    Bug Tracker = https://github.com/rshrj/arxiv-rename/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src